# shinkansen-passenger-satisfaction-predictor

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  Dockerfile.api  MAINTAINERS.md  README.md  Submission.csv  Submission_kebrahimpour.csv  compare_results.py  create_submission.py  optuna_search.py  pyproject.toml  submission_final_optimized.csv  submission_optimized_blend.csv
.devcontainer/: Dockerfile  Dockerfile.api  devcontainer.json  initialize.sh
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: build.yml  ci.yml  codeql-analysis.yml  lint.yml  test.yml
data/: README.md
models/: README.md
notebook/: winning-solution-of-shinkansen-competition.ipynb
scripts/: train.py
src/shinkansen_predictor/: __init__.py  api.py  predictor.py
tests/: test_api.py  test_predictor.py
