[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "shinkansen-predictor"
version = "0.1.0"
description = "Machine learning project predicting passenger satisfaction on Shinkansen trains using travel and survey data. Built for hackathon competition. Non-commercial use only."
authors = [{name = "kebrahimpour"}]
requires-python = ">=3.10"
readme = "README.md"
license = {file = "LICENSE"}
keywords = ["machine-learning", "data-science", "shinkansen", "passenger-satisfaction", "hackathon"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: CC0 1.0 Universal (CC0 1.0) Public Domain Dedication",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "scikit-learn>=1.3.0",
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "matplotlib>=3.7.0",
    "seaborn>=0.12.0",
    "plotly>=5.15.0",
    "fastapi>=0.100.0",
    "uvicorn[standard]>=0.22.0",
    "pydantic>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pre-commit",
    "pytest>=7.4.0",
    "black>=23.0.0",
    "flake8>=6.0.0",
    "pytest-cov>=4.1.0",
    "jupyter>=1.0.0",
    "notebook>=7.0.0",
]

[project.urls]
"Homepage" = "https://github.com/kebrahimpour/shinkansen-passenger-satisfaction-predictor"
"Bug Tracker" = "https://github.com/kebrahimpour/shinkansen-passenger-satisfaction-predictor/issues"
"Repository" = "https://github.com/kebrahimpour/shinkansen-passenger-satisfaction-predictor.git"

[tool.uv]
dev-dependencies = [
    "pytest>=7.4.0",
    "black>=23.0.0",
    "flake8>=6.0.0",
    "pytest-cov>=4.1.0",
    "jupyter>=1.0.0",
    "notebook>=7.0.0",
    "ruff>=0.4.6",
]

[tool.black]
line-length = 88
target-version = ["py310"]
include = '\.pyi?$'
extend-exclude = '''
(
  /(
      \.eggs
    | \.git
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
  )/
)
'''

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra -q --cov=src/shinkansen_predictor"
testpaths = [
    "tests",
]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
